--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favis/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/index.css">
     <title>GodWear - Seja Bem Vindo!</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="banner">
+            <div class="box-banner">
+                <h1>GodWear</h1>
+                <p>GodWear é um MMORPG 2d online, contendo diversas missões relacionadas a história onde se encontra o game!</p>
+                <div class="btn-jogar">
+                    <a href="#">Jogar</a>
+                </div>
+            </div>
+            <div class="dsn">
+                <img src="gifs/casa.gif" alt="">
+            </div>
+            <div class="redes">
+                <ul>
+                    <li><a href="#"><img src="redes/Instagram.png" alt=""></a></li>
+                    <li><a href="#"><img src="redes/Facebook.png" alt=""></a></li>
+                    <li><a href="#"><img src="redes/Twiter.png" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
